.happypack/s--20812735
SyntaxError: Unexpected token, expected ; (26:2)

[0m [90m 24 | [39m[32m  responsive}) => responsive && 0};[39m
 [90m 25 | [39m[32m  }[39m
[31m[1m>[22m[39m[90m 26 | [39m[32m`[39m [36mconst[39m [33mText[39m [33m=[39m styled[33m.[39mspan [32m`[39m
 [90m    | [39m  [31m[1m^[22m[39m
 [90m 27 | [39m[32m  @media screen and (max-width: 420px) {[39m
 [90m 28 | [39m[32m    display: ${ ({[39m
 [90m 29 | [39m[32m    responsive}) => responsive && 'none'};[39m[0m

BabelLoaderError: SyntaxError: Unexpected token, expected ; (26:2)

[0m [90m 24 | [39m[32m  responsive}) => responsive && 0};[39m
 [90m 25 | [39m[32m  }[39m
[31m[1m>[22m[39m[90m 26 | [39m[32m`[39m [36mconst[39m [33mText[39m [33m=[39m styled[33m.[39mspan [32m`[39m
 [90m    | [39m  [31m[1m^[22m[39m
 [90m 27 | [39m[32m  @media screen and (max-width: 420px) {[39m
 [90m 28 | [39m[32m    display: ${ ({[39m
 [90m 29 | [39m[32m    responsive}) => responsive && 'none'};[39m[0m

    at transpile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:61:13)
    at Object.module.exports (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyWorker.js:32:3)